# img2ldr

./: Cargo.toml  LDRAW.md  README.md
data/: kurzgesagt.ldr  kurzgesagt_chunk.pgm  kurzgesagt_chunk_ldr.pgm  kurzgesagt_resized.pgm  map.ldr  moon.ldr  test.ldr
src/: color_utils.rs  colors.rs  image_utils.rs  ldraw_utils.rs  lib.rs  main.rs
