[package]
name = "img2ldr"
authors = ["Kadsendino"]
description = "Converts an image to an ldraw file for creating brick art."
repository = "https://github.com/kadsendino/img2ldr"
website = "https://github.com/kadsendino/img2ldr"
version = "0.1.0"
edition = "2024"

[dependencies]
fast_image_resize = { version = "6", features = ["image"] }
image = "0.25.9"
palette = "0.7.6"
